2016-08-20 Sandro Ventura <sandro.ventura@cern.ch>
	* tag V01-08-05
	* fix bugs in (V)ESInputTag implementation
	* add feature to read PrescaleTable updates from a csv file

2015-05-08 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-08-04
	* update build environment for lxplus and the `confdb` user

2015-04-28 Martin Grunewald <Martin.Grunewald@cern.ch>
	* tag V01-08-03
	* blacklist bad file

2015-03-19 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-08-02
	* append the HLTSchedule to the menu also for full dumps

2015-02-27 Martin Grunewald <Martin.Grunewald@cern.ch>
	* tag V01-08-01
	* fix import of global PSets

2015-01-25 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-08-00
	* do not build or deploy the "GUI all-inlusive" jar
	* web interface: do not close the output stream
	* update server URL

2015-01-16 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-23
	* allow using the BrowserConverter from the command line

2014-11-26 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-22
	* more JavaCodeExecution

2014-11-25 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-21
	* more JavaCodeExecution

2014-11-17 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-20
	* allow more STORM and FOG people to Unlock configurations

2014-08-03 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-19
	* read the port number from the database properties

2014-08-03 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-18
	* add an entry to access the development database over ssh

2014-07-11 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-17
	* fix the build system to use a CERN-issued code-signing certificate

2014-07-02 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-16
	* Extend parameter-type/value search to global PSets

2014-05-20 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-15
	* Some more Java code

2014-05-09 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-14
	* Add Java code for PR 3211, misc fixes
