@@ -1,3 +1,3 @@
-confdb.version=V01-08-05
+confdb.version=V01-08-06
 confdb.contact=andrea.bocci@cern.ch
-confdb.url=http://confdb.web.cern.ch/confdb/
+confdb.url=http://confdb.web.cern.ch/confdb/v1/
