@@ -1,3 +1,8 @@
+2016-08-29 Andrea Bocci <andrea.bocci@cern.ch>
+	* tag V01-08-06
+	* sign JARs directly with confdb's certificate
+	* deploy at http://confdb.web.cern.ch/confdb/v1/
+
 2016-08-20 Sandro Ventura <sandro.ventura@cern.ch>
 	* tag V01-08-05
 	* fix bugs in (V)ESInputTag implementation
